infra/k8s/manifests/admin-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: admin-web
  name: admin-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-web
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: admin-web
    spec:
      containers:
        - image: hanwoo-admin-web:latest
          imagePullPolicy: Never          
          name: admin-web
          # env:
          #   - name: VISIT_FILE
          #     value: "'/usr/share/next-resources/visitor_count.json'"
          volumeMounts:
            - name: resource-server-storage
              mountPath: /usr/share/next-resources
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: resource-server-storage
          persistentVolumeClaim:
            claimName: resource-server-claim0
          # hostPath:
          #   path: /tmp/shared-uploads
          #   type: DirectoryOrCreate
