infra/k8s/manifests/client-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: client-service
  name: client-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: client-service
    spec:
      containers:
        - env:
            - name: DB_DSN
              value: root:1234@tcp(mysql:3306)/service?charset=utf8mb4&parseTime=True&loc=Local
            - name: SERVER_PORT
              value: :8082
          image: hanwoo-client-service:latest
          imagePullPolicy: Never          
          name: client-service
          ports:
            - containerPort: 8082
              protocol: TCP
      restartPolicy: Always
