infra/k8s/manifests/client-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: client-web
  name: client-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client-web
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: client-web
    spec:
      containers:
        - image: hanwoo-client-web:latest
          imagePullPolicy: Never          
          name: client-web
          volumeMounts:
          - name: resource-server-storage
            mountPath: /usr/share/next-resources
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: resource-server-storage
          persistentVolumeClaim:
            claimName: resource-server-claim0
