infra/k8s/manifests/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: mysql
    spec:
      containers:
        - args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
          image: mysql:8.2.0
          imagePullPolicy: Never          
          livenessProbe:
            exec:
              command:
                
                - mysqladmin
                - ping
                - -h
                - mysql
                - -u
                - root
                - --password=1234
            failureThreshold: 10
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          name: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
            - mountPath: /docker-entrypoint-initdb.d
              name: mysql-cm1
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
        - configMap:
            name: mysql-cm1
          name: mysql-cm1
