infra/k8s/manifests/resource-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: resource-server
  name: resource-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: resource-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: resource-server
    spec:
      containers:
        - image: nginx:alpine
          imagePullPolicy: Never          
          name: resource-server
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/nginx/html/resources
              name: resource-server-storage
              readOnly: true
            - mountPath: /etc/nginx/nginx.conf
              name: resource-server-cm1
              readOnly: true
              subPath: nginx.conf
      restartPolicy: Always
      volumes:
        - name: resource-server-storage
          hostPath:
            path: /tmp/shared-uploads
            type: DirectoryOrCreate
        - configMap:
            items:
              - key: nginx.conf
                path: nginx.conf
            name: resource-server-cm1
          name: resource-server-cm1
