infra/k8s/manifests/admin-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: admin-service
  name: admin-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: admin-service
