infra/k8s/manifests/admin-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: admin-web
  name: admin-web
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3000
  selector:
    io.kompose.service: admin-web
