infra/k8s/manifests/resource-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: resource-server
  name: resource-server
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    io.kompose.service: resource-server
