infra/k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: admin.local  # 어드민 접속 주소
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-web
            port:
              number: 3001
  - host: client.local # 클라이언트 접속 주소
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-web
            port:
              number: 3000
